@@ -16,3 +16,4 @@
 /.check-html-man
 /.check-man-pages
 /.check-man-txt
+/asciidoc.conf
