@@ -56,11 +56,9 @@ ifdef::backend-xhtml11[]
 # FIXME: Allow to define external man page URL structure and whether
 #  sections should change via configure script options:
 [linkmanext-inlinemacro]
-<a href="https://linux.die.net/man/{0}/{target}">{target}{0?({0})}</a>
-#<ulink url="https://linux.die.net/man/{0}/{target}">{target}{0?({0})}</ulink>
+<a href="@ASCIIDOC_TEMPLATE_LINKMANEXT@">{target}{0?({0})}</a>
 [linkmanext2-inlinemacro]
-<a href="https://linux.die.net/man/{2}/{target}">{1={target}}{2?({2})}</a>
-#<ulink url="https://linux.die.net/man/{2}/{target}">{1={target}}{2?({2})}</ulink>
+<a href="@ASCIIDOC_TEMPLATE_LINKMANEXT2@">{1={target}}{2?({2})}</a>
 # Override HTML footer, to include NUT version
 [footer-text]
 Last updated {docdate} {doctime} -- Network UPS Tools {nutversion}
